--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
@@ -28,7 +28,7 @@
             {
                 foreach (var item in ViewBag.Doppel)
                 {
-                    <div id="ExelItem">
+                    <div class="ExelItem">
                         <div id="productImage">
                             <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
                         </div>
@@ -56,7 +56,7 @@
             {
                 foreach (var item in ViewBag.Knaufzylinder)
                 {
-                    <div id="ExelItem">
+                    <div class="ExelItem">
                         <div id="productImage">
                             <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
                         </div>
@@ -83,7 +83,7 @@
             {
                 foreach (var item in ViewBag.Halb)
                 {
-                    <div id="ExelItem">
+                    <div class="ExelItem">
                         <div id="productImage">
                             <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
                         </div>
@@ -110,7 +110,7 @@
             {
                 foreach (var item in ViewBag.Hebel)
                 {
-                    <div id="ExelItem">
+                    <div class="ExelItem">
                         <div id="productImage">
                             <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
                         </div>
@@ -137,7 +137,7 @@
             {
                 foreach (var item in ViewBag.VorhanSchloss)
                 {
-                    <div id="ExelItem">
+                    <div class="ExelItem">
                         <div id="productImage">
                             <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
                         </div>
@@ -164,7 +164,7 @@
             {
                 foreach (var item in ViewBag.Aussen)
                 {
-                    <div id="ExelItem">
+                    <div class="ExelItem">
                         <div id="productImage">
                             <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
                         </div>
