--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
@@ -2,13 +2,16 @@
 
 @{
     ViewData["Title"] = "Edit";
+    int count = -1;
+    int f = -1;
+    int r = -1;
 }
 
 <h1>Edit Vorhangschloss</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="SaveVorhangschloss">
+        <form asp-action="SaveVorhangschloss" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
            
             @Html.HiddenFor(x=>x.Id)
@@ -51,7 +54,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Cost" class="control-label"></label>
-                <input asp-for="Cost" class="form-control" />
+                <input asp-for="Cost" type="number" step="0.01" class="form-control" />
                 <span asp-validation-for="Cost" class="text-danger"></span>
             </div>
             
@@ -61,28 +64,71 @@
                 <span asp-validation-for="ImageName" class="text-danger"></span>
             </div>
             <label asp-for="ImageFile" class="control-label"></label>
-            <br />
-            <input asp-for="ImageFile" accept="image/*" />
-            <span asp-validation-for="ImageFile" class="text-danger"></span>
-            <br />
-            @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
             <hr />
-            <h2>Size and Cost</h2>
-            <div style="display:grid;grid-template-columns:repeat(2,auto)">
+            <h1>Aussen & Innen <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
+            <div id="Aussen_Innen_ProfilDopel">
+
+                <div id="AussenProfilDopel">
                 @foreach (var list in @ViewBag.Size)
                 {
-                    <div>
                         <input class="form-control" name="Size" value="@list.sizeVorhangschloss" />
-                    </div>
-                   
-                    <div>
+                }
+                </div>
+
+                <div id="InnenProfilDopel">
+                    @foreach (var list in @ViewBag.Size)
+                    {
                         <input class="form-control" name="CostSize" value="@list.Cost" />
-                    </div> 
+                    }
+                </div>
+            </div>
+
+            <div id="productOptions">
+                @if (ViewBag.optionV == true)
+                {
+                    @foreach (var options in ViewBag.Options)
+                    {
+                        r++;
+                        <div class="input-block">
+                            <h2>Options</h2>
+                            <div class="form-group">
+                                <label class="control-label">Options Name</label>
+                                <input name="Options" value="@options.Name" id="opt" class="form-control" />
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">Description</label>
+                                <input name="Descriptions" value="@options.Description" class="form-control" />
+                            </div>
+
+                            <h1>Value & Cost </h1>
+                            <div id="Aussen_Innen_ProfilDopel">
+                                <div id="valueNGF" class="form-group">
+
+                                    @for (int i = 0; i < ViewBag.CountOptions[r]; i++)
+                                    {
+                                        count++;
+                                        <input type="text" placeholder="valueNGF" name="valueNGF" value="@ViewBag.OptionValue[count].Value" class="form-control" />
+                                    }
+                                </div>
+                                <div class="form-group" id="costNGF">
+
+                                    @for (int i = 0; i < ViewBag.CountOptions[r]; i++)
+                                    {
+                                        f++;
+                                        <input type="text" placeholder="costNGF" @* step="0,01" *@ name="costNGF" value="@ViewBag.OptionValue[f].Cost" class="form-control" />
+                                    }
+                                </div>
+                                <input type="hidden" id="counter" name="inputCounter" />
+                            </div>
+                        </div>
+                    }
                 }
             </div>
-            
             <hr />
-
+            <button id="createBlockBtn" type="button" class="btn btn-success">Add Options</button>
+            <button id="addInputBtn" type="button" class="btn btn-success">+</button>
+            <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
+            <hr />
             <input type="submit" value="Save" class="btn btn-primary" />
         </form>
     </div>
@@ -97,27 +143,182 @@
     }
 }
 <script>
+    let plusAussen_Innen = document.getElementById('addAussen_Innen');
+    let removeAussen_Innen = document.getElementById('addAussen_Innen_remove');
+
+    let docInnen = document.getElementById('InnenProfilDopel');
+    let docAussen = document.getElementById('AussenProfilDopel');
+
     let schliessanlagenType = document.getElementById("schliessanlagenId");
-    let VorhanType = document.getElementById("VorhanType");
+    let AussenType = document.getElementById("AussenType");
+
+    window.addEventListener('load', function () 
+    {
+        const blocks = document.querySelectorAll('.input-block');
+        for (let i = 0; i < blocks.length; i++) 
+        {
+            let counterBlock = blocks[i].querySelectorAll("#valueNGF  input");
+
+            let counter = blocks[i].querySelectorAll("#counter");
+
+            counter[0].value = counterBlock.length;
+
+            console.log(counter[0].value);
+        }
+    });
 
     function SelectionNewType(value) {
         if (value == "Profil-Doppelzylinder") {
-            VorhanType.value = 1;
+            AussenType.value = 1;
         }
         if (value == "Profil-Halbzylinder") {
-            VorhanType.value = 2;
+            AussenType.value = 2;
         }
         if (value == "Profil-Knaufzylinder") {
-            VorhanType.value = 3;
+            AussenType.value = 3;
         }
         if (value == "Hebelzylinder") {
-            VorhanType.value = 4;
+            AussenType.value = 4;
         }
         if (value == "Vorhangschloss") {
-            VorhanType.value = 5;
+            AussenType.value = 5;
         }
         if (value == "Aussenzylinder_Rundzylinder") {
-            VorhanType.value = 6;
+            AussenType.value = 6;
         }
     }
+    let costNGF = document.getElementById('costNGF');
+    let valueNGF = document.getElementById('valueNGF');
+
+    let productOptions = document.getElementById('productOptions');
+    let addOptions = document.getElementById('addOptions');
+
+    plusAussen_Innen.addEventListener('click', () => {
+        let d = document.createElement('input');
+        d.setAttribute('name', 'Size');
+        d.setAttribute('placeholder', 'Size');
+        d.setAttribute('class', 'form-control');
+        d.id = 'aus';
+
+        let x = document.createElement('input');
+        x.setAttribute('name', 'CostSize');
+        x.setAttribute('placeholder', 'Cost');
+        x.id = 'inter';
+        x.setAttribute('class', 'form-control');
+        docAussen.append(d);
+        docInnen.append(x);
+
+    });
+    removeAussen_Innen.addEventListener('click', () => {
+        let d = document.querySelectorAll('#aus');
+        let x = document.querySelectorAll('#inter');
+
+
+        docAussen.removeChild(d[d.length - 1]);
+        docInnen.removeChild(x[x.length - 1]);
+    });
+
+    document.addEventListener("DOMContentLoaded", function () {
+        const container = document.getElementById('productOptions');
+        const createBlockBtn = document.getElementById('createBlockBtn');
+        const addInputBtn = document.getElementById('addInputBtn');
+        const RemoveInputBtn = document.getElementById('RemoveInputBtn');
+
+        let blockCounter = document.querySelectorAll('.input-block').length > 0 ? document.querySelectorAll('.input-block').length : 1;
+
+        createBlockBtn.addEventListener('click', function () {
+            const block = createBlock();
+            container.appendChild(block);
+        });
+
+        addInputBtn.addEventListener('click', function () {
+            const blocks = document.querySelectorAll('.input-block');
+            const lastBlock = blocks[blocks.length - 1];
+
+            if (lastBlock) {
+                addInputs(lastBlock);
+            } else {
+                alert('Сначала создайте блок');
+            }
+        });
+
+        RemoveInputBtn.addEventListener('click', function () 
+        {
+            const blocks = document.querySelectorAll('.input-block');
+            const lastBlock = blocks[blocks.length - 1];
+
+            let inputProductValue = lastBlock.querySelectorAll("#valueNGF  input");
+            let inputProductPrice = lastBlock.querySelectorAll("#costNGF  input");
+
+            if (lastBlock) {
+                if (inputProductValue.length < 2) {
+                    productOptions.removeChild(lastBlock);
+                }
+                else {
+                    inputProductValue[inputProductValue.length - 1].parentNode.removeChild(inputProductValue[inputProductValue.length - 1]);
+                    inputProductPrice[inputProductPrice.length - 1].parentNode.removeChild(inputProductPrice[inputProductPrice.length - 1]);
+                }
+            }
+            else {
+                alert('Сначала создайте блок');
+            }
+        });
+
+        function createBlock() 
+        {
+            const block = document.createElement('div');
+            block.classList.add('input-block');
+            block.id = `block-${blockCounter}`;
+            block.innerHTML = `<div>
+                                                                        <h1>Options</h1>
+                                                                        <label>Name</label>
+                                                                        <input class="form-control" type="text" name="Options" />
+                                                                        <div>
+                                                                            <p></p>
+                                                                            <input name="postedFile" type="file" class="btn btn-success" />
+                                                                            <p></p>
+                                                                        </div>
+                                                                        <label>Descriptions</label>
+                                                                        <input class="form-control" type="text" name="Descriptions" />
+                                                                        <h1>Value & Cost </h1>
+                                                                        <div id="Aussen_Innen_ProfilDopel">
+                                                                            <div id="valueNGF">
+                                                                                <input type="text" placeholder="valueNGF" name="valueNGF" />
+
+                                                                            </div>
+                                                                            <div id="costNGF">
+                                                                                        <input type="number" placeholder="costNGF" step="0.01" name="costNGF" />
+                                                                            </div>
+                                                                                                    <input type="hidden" id="counter" name="inputCounter" />
+                                                                        </div>
+                                                                    </div>`;
+
+            blockCounter++;
+
+            return block;
+        }
+
+        function addInputs(block) {
+
+            let d = document.createElement('input');
+            d.setAttribute('name', 'costNGF');
+            d.setAttribute('placeholder', 'costNGF');
+
+            let x = document.createElement('input');
+            x.setAttribute('name', 'valueNGF');
+            x.setAttribute('placeholder', 'valueNGF');
+
+            const div1 = block.querySelector('#valueNGF');
+            const div2 = block.querySelector('#costNGF');
+
+            div1.appendChild(x);
+
+            div2.appendChild(d);
+
+            var counter = document.querySelectorAll('#counter');
+            counter[counter.length - 1].value = block.querySelectorAll("#valueNGF  input").length;
+        };
+
+    })
+
 </script>
