--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model schliessanlagen_konfigurator.Models.ProfilDopelZylinder.Profil_Doppelzylinder;
 @{
     ViewData["Title"] = "Profil Doppelzylinder";
+    int i = -1;
 }
 
 <div class="text-center ">
@@ -97,7 +98,7 @@
                         <th>Name</th>
                         <th>Image</th>
                         <th>Cost</th>
-                      
+                        <th>KeyCost</th>
                     
                         <th>Edit</th>
                         <th>Options</th>
@@ -105,12 +106,13 @@
                     
                         @foreach (var item in ViewBag.item)
                         {
+                            i++;
                             <td id="rowTable" class="table-info">@item.companyName</td>
                             <td id="rowTable" class="table-info">@item.NameSystem</td>
                             <td id="rowTable" class="table-info">@item.Name</td>
                             <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
                             <td id="rowTable " class="table-info"><h6 id="cost">@item.Cost</h6></td>
-                          
+                            <td id="rowTable " class="table-info"><h6 id="cost">@ViewBag.KeyCost[i]</h6></td>
 
 
                             <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
@@ -120,8 +122,8 @@
                                 </a>
                             </td>
                             <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
-                            }
-            
+                            
+                        }
                     </tr>
                 </tbody>
             </table>
