--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_HalbzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_HalbzylinderRout.cshtml
@@ -84,7 +84,7 @@
         {
             <table class="table table-bordered">
                 <tbody>
-                    <tr id="Table">
+                    <tr id="Table2">
                         <th>CompanyName</th>
                         <th>Systeam</th>
                         <th>Name</th>
