--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
@@ -88,7 +88,7 @@
         {
             <table class="table table-bordered">
                 <tbody>
-                    <tr id="Table">
+                    <tr id="Table2">
                         <th>CompanyName</th>
                         <th>Systeam</th>
                         <th>Name</th>
