--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -200,9 +200,12 @@ a {
 
 #Table {
     display: grid;
+    grid-template-columns: repeat(9,auto);
+}
+#Table2 {
+    display: grid;
     grid-template-columns: repeat(8,auto);
 }
-
 #TableOptions {
     display: grid;
     grid-template-columns: repeat(2,auto);
