--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
@@ -70,13 +70,13 @@
                     </div>
 
                 </div>
-
+                <button id="createBlockBtn" type="button" class="btn btn-success">Add Options</button>
+                <button id="addInputBtn" type="button" class="btn btn-success">+</button>
+                <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
                 <input type="submit" class="btn btn-success" id="input" value="Create Vorhangschloss" />
             </form>
 
-            <button id="createBlockBtn" class="btn btn-success">Add Options</button>
-            <button id="addInputBtn" class="btn btn-success">+</button>
-            <button id="RemoveInputBtn" class="btn btn-danger">-</button>
+           
        
         </div>
 
@@ -210,7 +210,7 @@
 
                                                             </div>
                                                             <div id="costNGF">
-                                                                        <input type="number" id='cost' placeholder="costNGF" id="cost" step="0.01" name="costNGF" />
+                                                                        <input type="number"  placeholder="costNGF"  step="0.01" name="costNGF" />
                                                             </div>
                                                                         <input type="hidden" id="counter" name="input_counter" />
                                                         </div>
