--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Aussenzylinder_RundzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Aussenzylinder_RundzylinderRout.cshtml
@@ -60,14 +60,14 @@
                     </div>
 
                 </div>
+                <button id="createBlockBtn" type="button" class="btn btn-success">Add Options</button>
+                <button id="addInputBtn" type="button" class="btn btn-success">+</button>
+                <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
 
                 <input type="submit" class="btn btn-success" id="input" value="Create Aussenzylinder Rundzylinder" />
             </form>
 
-            <button id="createBlockBtn" class="btn btn-success">Add Options</button>
-            <button id="addInputBtn" class="btn btn-success">+</button>
-            <button id="RemoveInputBtn" class="btn btn-danger">-</button>
-     
+          
         </div>
 
     </div>
