--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -55,8 +55,7 @@
                     <div style="margin-bottom: 50px;">
                         <label>Cost</label>
                         <input asp-for="Cost" class="form-control" />
-                    </div> 
-
+                    </div>
                     <h1>Aussen & Innen <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
                    
                     <div id="Aussen_Innen_ProfilDopel">
@@ -70,18 +69,27 @@
                         </div>
                     </div> 
                     <div id="productOptions">
-                   
-
                     </div>
 
                 </div>
-
+                <hr />
+                <h2>Schlüssel</h2>
+                <div style="margin-bottom: 50px;">
+                    <label>KeyName</label>
+                    <input name="KeyName" type="text" class="form-control" />
+                </div>
+                <div style="margin-bottom: 50px;">
+                    <label>KeyCost</label>
+                    <input name="KeyCost" type="number" step="0,1" min="0" class="form-control" />
+                </div>
+                
+                <hr />
+                <button id="createBlockBtn" type="button" class="btn btn-success">Add Options</button>
+                <button id="addInputBtn" type="button" class="btn btn-success">+</button>
+                <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
                 <input type="submit" class="btn btn-success" id="input" value="Create Profil Doppelzylinder" />
             </form>
 
-            <button id="createBlockBtn" class="btn btn-success">Add Options</button>
-            <button id="addInputBtn" class="btn btn-success">+</button>
-            <button id="RemoveInputBtn" class="btn btn-danger">-</button>
         </div>
 
     </div>
@@ -217,7 +225,7 @@
 
                                                     </div>
                                                     <div id="costNGF">
-                                                                <input type="number" id='cost' placeholder="costNGF" id="cost" step="0.01" name="costNGF" />
+                                                                <input type="number"  placeholder="costNGF" step="0.01" name="costNGF" />
                                                     </div>
                                                                 <input type="hidden" id="counter" name="input_counter" />
                                                 </div>
