--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_HalbzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_HalbzylinderRout.cshtml
@@ -68,12 +68,12 @@
                     </div>
 
                 </div>
-
+                <button id="createBlockBtn" type="button" class="btn btn-success">Add Options</button>
+                <button id="addInputBtn" type="button" class="btn btn-success">+</button>
+                <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
                 <input type="submit" class="btn btn-success" id="input" value="Create Halbzylinder" />
             </form>
-            <button id="createBlockBtn" class="btn btn-success">Add Options</button>
-            <button id="addInputBtn" class="btn btn-success">+</button>
-            <button id="RemoveInputBtn" class="btn btn-danger">-</button>
+           
         </div>
 
     </div>
@@ -199,7 +199,7 @@
 
                                                             </div>
                                                             <div id="costNGF">
-                                                                        <input type="number" id='cost' placeholder="costNGF" id="cost" step="0.01" name="costNGF" />
+                                                                        <input type="number"  placeholder="costNGF"  step="0.01" name="costNGF" />
                                                             </div>
                                                                         <input type="hidden" id="counter" name="input_counter" />
                                                         </div>
